dropshot/tests/fail/bad_channel3.stderr
error[E0631]: type mismatch in closure arguments
  --> tests/fail/bad_channel3.rs:14:1
   |
14 | async fn bad_channel(
   | ^^^^^
   | |
   | expected due to this
   | found signature defined here
   |
   = note: expected closure signature `fn(WebsocketConnection) -> _`
              found closure signature `fn(String) -> _`
note: required by a bound in `WebsocketUpgrade::handle`
  --> src/websocket.rs
   |
   |     pub fn handle<C, F>(mut self, handler: C) -> WebsocketEndpointResult
   |            ------ required by a bound in this associated function
   |     where
   |         C: FnOnce(WebsocketConnection) -> F + Send + 'static,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WebsocketUpgrade::handle`

error[E0271]: type mismatch resolving `<String as TypeEq>::This == WebsocketConnection`
  --> tests/fail/bad_channel3.rs:16:13
   |
16 |     _param: String,
   |             ^^^^^^
   |             |
   |             expected this to be `WebsocketConnection`
   |             type mismatch resolving `<String as TypeEq>::This == WebsocketConnection`
   |
note: required by a bound in `validate_websocket_connection_type`
  --> tests/fail/bad_channel3.rs:16:13
   |
16 |     _param: String,
   |             ^^^^^^ required by this bound in `validate_websocket_connection_type`
